# NimmerSAT

./: .gitignore  CMakeLists.txt
benchmarks/: benchmark.go  cactus_plot.jl
src/: NSatUtility.h  main.cpp
src/Dimacs/: Dimacs.cpp  Dimacs.h
src/Formula/: Cache.cpp  FormulaCache.h  VariableCache.h
src/Solver/: Assign.cpp  Assign.h  Stack.h
